deploy/manifests/prod/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creative-studio
  namespace: default
spec:
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: creative-studio
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: creative-studio
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: creative-studio-secrets
        image: demo.goharbor.io/creative-studio/creative-studio@sha256:44decea1749f19b3834abc490657b8abc7bca811268c4eab9d235bc395432dc8
        name: creative-studio
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 400m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - mountPath: /app/data
          name: app-storage
      imagePullSecrets:
      - name: harbor-secret
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: creative-studio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: creative-studio-service
  namespace: default
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 3000
  selector:
    app: creative-studio
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: default
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: creative-studio
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-creative-studio-ingress
  namespace: default
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app: creative-studio
  policyTypes:
  - Ingress
---
